2014-03-16  Holger Seelig  <holger.seelig@yahoo.de>

	* SceneLoader.cpp:
	* TextureLoader.cpp:
	* Texture3DLoader.cpp: 

2014-03-16  Holger Seelig  <holger.seelig@yahoo.de>

	* jsfield.h:
	* jsContext.h:
	* jsfield.cpp:
	* jsX3DRoute.h:
	* jsX3DScene.h:
	* jsContext.cpp:
	* jsX3DScene.cpp:
	* jsConstArray.h:
	* jsX3DRoute.cpp:
	* jsProfileInfo.h:
	* jsComponentInfo.h:
	* jsSFVec4.h:
	* jsProfileInfo.cpp:
	* jsX3DArrayField.h:
	* jsSFVec2.h:
	* jsSFNode.h:
	* jsSFVec3.h:
	* jsSFImage.h:
	* jsSFColor.h:
	* jsSFNode.cpp:
	* jsComponentInfo.cpp:
	* jsSFMatrix3.h:
	* jsSFImage.cpp:
	* jsSFColor.cpp:
	* jsSFMatrix4.h:
	* jsSFRotation.h:
	* jsSFColorRGBA.h:
	* jsX3DFieldDefinition.h:
	* jsX3DProtoDeclaration.h:
	* jsSFRotation.cpp:
	* jsX3DExecutionContext.h:
	* jsFieldDefinitionArray.h:
	* jsX3DFieldDefinition.cpp:
	* jsSFColorRGBA.cpp:
	* jsX3DProtoDeclaration.cpp:
	* jsX3DExecutionContext.cpp:
	* jsFieldDefinitionArray.cpp:
	* jsX3DExternProtoDeclaration.h:
	* jsX3DExternProtoDeclaration.cpp: 

2014-03-16  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.cpp:
	* ExternProto.cpp:
	* X3DFieldDefinition.cpp:
	* X3DExecutionContext.h:
	* Inline.cpp:
	* X3DExecutionContext.cpp:
	* MovieTexture.cpp:
	* X3DTexture2DNode.h:
	* X3DPrototypeInstance.cpp:
	* X3DTexture2DNode.cpp:
	* jsX3DExecutionContext.cpp: 

2014-03-15  Holger Seelig  <holger.seelig@yahoo.de>

	* RegEx.cpp:
	* Proto.h:
	* World.h:
	* Route.cpp:
	* World.cpp:
	* Proto.cpp:
	* X3DBaseNode.h:
	* SceneLoader.h:
	* X3DChildObject.h:
	* X3DBaseNode.cpp:
	* TextureLoader.h:
	* SceneLoader.cpp:
	* X3DBrowser.cpp:
	* TextureLoader.cpp:
	* Texture3DLoader.h:
	* Notification.cpp:
	* Text.cpp:
	* ExternProto.cpp:
	* Texture3DLoader.cpp:
	* TransformHandle.cpp:
	* Selection.h:
	* X3DFieldDefinition.cpp:
	* BindableNodeList.h:
	* BindableNodeStack.h:
	* X3DBrowserContext.cpp:
	* Script.h:
	* Selection.cpp:
	* Appearance.h:
	* LineSet.h:
	* Script.cpp:
	* Appearance.cpp:
	* PointSet.h:
	* Inline.cpp:
	* LineSet.cpp: